 - Enhancement  #1744 Parse more search pages in ComingSoon results
 - Fixed defect #1748 Title of movies are UNKNOW when using Allocine plugin
 - Enhancement  #1750 New PassionXbmc Movie Poster plugin
 - Fixed defect #1755 Movie length incorrect
 - Fixed defect #1760 New issue with Allocine plugin (plot)
 - Enhancement  #1768 ComingSoon plugin enhancements

MovieJukebox 2.2
----------------
  - Enhancement   #323 TheMovieDB plugin created
  - Fixed defect  #558 New episodes from TV series didn't appear in the NEW Category.
  - Enhancement   #617 Add logo to cover art to indicate the presence of subtitle
  - Enhancement   #735 Allow users to tune category parameters on a per-category basis
  - Enhancement   #773 Save NFO files
  - Enhancement  #1440 Detect VOBSUB tracks in MKV files
  - Enhancement  #1497 Timeouts added for TheTVDb and TheMovieDb
  - Fixed defect #1546 New index not updating correctly
  - Fixed defect #1555 Genres added to ComingSoon plugin
  - Enhancement  #1560 Rescanning based on Jukebox Property changes
  - Fixed defect #1567 Download of French cover doesn't work properly
  - Fixed defect #1605 New IMDb site format breaks IMDb scanner (Updated for additional plot formats)
  - Enhancement  #1606 New fields for MovieListingPluginCustomCsv and limits for Cast and Genres fields
  - Fixed defect #1609 Only one fanart downloaded
  - Fixed defect #1616 KinoPoisk's plugin has problems when filename contains media-tags (like 'BLU-RAY')
  - Fixed defect #1617 Error when finding braces ({ or }) in filename
  - Fixed defect #1618 IMDB writers contain "and ? more credits"
  - Enhancement  #1621 Use original title instead of title for skins.
  - Fixed defect #1622 Path change routine not updating library description.
  - Fixed defect #1623 Custom Fanart not found when 'mjb.scanner.hashpathdepth' enabled
  - Fixed defect #1627 ImdbPlugin - bug with plot
  - Fixed defect #1628 NFO Premiered date error