@@ -721,3 +721,27 @@ comingsoon.imdb.scan=always
 # Specifies which informations will be fetched from IMDB (if present) rather than from comingsoon.it
 # Comma separated list of the following values: title,originalTitle,plot,outline,rating,runtime,country,year,company,genres,cast,directors,writers
 comingsoon.imdb.perferredFor=rating,runtime,country,year,company,cast,writers
+
+# Italian trailer download from comingsoon.it
+#
+# Only one trailer is downloaded for each movie (only if no other trailer is present)
+#
+# The desired resolution of trailers from comingsoon site
+# Valid resolutions are: 1080p 720p 480p 
+# Choose only one of these values, if a trailer is not found at that resolution then a lower quality one will be looked for.
+# Leave this blank or commented out to disable this feature
+comingsoon.trailer.resolution=
+
+# HD trailers are usually available in MOV format from comingsoon.it. WMV is found sometimes. This property specifies the
+# preferred format order. 
+comingsoon.trailer.preferredFormat=wmv,mov
+
+# Specifies if "trailer exchange" property should be set when no trailer is found. If this poperty is set to false, the appletrailer
+# plugin will be used if configured. If set to true, only comingsoon trailers will be scanned.
+comingsoon.trailer.setExchange=false
+
+# Specifies if found trailer should be downloaded
+comingsoon.trailer.download=false
+
+# For downloaded trailers, this property will set a label that will be added in the filename. E.g. <MOVIE_FILENAME>.[TRAILER-ita].avi
+comingsoon.trailer.label=ita
