@@ -37,6 +37,7 @@ MovieJukebox 2.3 BETA
  - Fixed defect #1755 Movie length incorrect
  - Fixed defect #1760 New issue with Allocine plugin (plot)
  - Enhancement  #1768 ComingSoon plugin enhancements
+ - Enhancement  #1770 ComingSoon trailer download
 
 MovieJukebox 2.2
 ----------------
